--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@react-navigation/stack": "^6.0.11",
     "axios": "^0.24.0",
     "expo": "~44.0.0",
+    "expo-location": "~14.0.1",
     "expo-status-bar": "~1.2.0",
+    "expo-task-manager": "^10.1.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
