change app name

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "recommend",
-    "slug": "recommend",
+    "name": "Recommend",
+    "slug": "Recommend",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./app/assets/icon.png",
