--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.14",
+    "@react-native-community/datetimepicker": "^5.1.0",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
     "axios": "^0.24.0",
     "expo": "~44.0.0",
+    "expo-background-fetch": "~10.1.0",
     "expo-location": "~14.0.1",
+    "expo-notifications": "~0.14.0",
     "expo-status-bar": "~1.2.0",
     "expo-task-manager": "^10.1.0",
     "react": "17.0.1",
@@ -26,9 +29,7 @@
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-vector-icons": "^9.0.0",
-    "react-native-web": "0.17.1",
-    "expo-notifications": "~0.14.0",
-    "expo-background-fetch": "~10.1.0"
+    "react-native-web": "0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
